# exo

./: .hgignore  .hgtags  .travis.yml  CMakeLists.txt  Changelog  Contributors  README.md  TODO  exo.cpp  exo.h  exo.kdev4  exo.pro  exo.qrc  lyricswindow.cpp  lyricswindow.h  lyricswindow.ui  main.cpp
.github/: FUNDING.yml
.github/workflows/: ccpp.yml
images/: exo.qrc
misc/: CMakeLists.txt
misc/applications/: exo.desktop  mocp-exo.desktop
misc/man/man1/: exo-player.1  exo.1
misc/pixmaps/: exo16.xpm  exo32.xpm
src/: CMakeLists.txt  about.ui  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bookmark.cpp  bookmark.h  bookmarkmanager.cpp  bookmarkmanager.h  cmusinterface.cpp  cmusinterface.h  config.h.in  editor.cpp  editor.h  exo.cpp  exo.h  lyricsdialog.cpp  lyricsdialog.h  lyricsdialog.ui  lyricswindow.cpp  lyricswindow.h  lyricswindow.ui  main.cpp  mocplayerinterface.cpp  mocplayerinterface.h  playerinterface.cpp  playerinterface.h  scrobbler.cpp  scrobbler.h  scrobblersettings.cpp  scrobblersettings.h  scrobblersettings.ui  trayicon.cpp  trayicon.h
src/bookmarks/: bookmark.cpp  bookmark.h  bookmarkdialog.cpp  bookmarkdialog.h  bookmarkmanager.cpp  bookmarkmanager.h
src/core/: cmusinterface.cpp  cmusinterface.h  consoleauth.cpp  consoleauth.h  exo.cpp  exo.h  mocinterface.cpp  mocinterface.h  mocinterfacenative.cpp  mocinterfacenative.h  mocplayerinterface.cpp  mocplayerinterface.h  playerinterface.cpp  playerinterface.h  process.cpp  process.h  singleinstance.cpp  singleinstance.h  spotifyinterface.cpp  spotifyinterface.h  sysutils.cpp  sysutils.h
src/core/socket/: protocol.h
src/dbus/: dbus.cpp  dbus.h  exoobject.cpp  exoobject.h  playerobject.cpp  playerobject.h  rootobject.cpp  rootobject.h  tk.loimu.exo.TrayIcon.xml
src/gui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  basedialog.cpp  basedialog.h  bookmarkmanager.cpp  bookmarkmanager.h  editor.cpp  editor.h  lyricsdialog.cpp  lyricsdialog.h  lyricsdialog.ui  lyricsproviders.cpp  lyricsproviders.h  scrobblersettings.cpp  scrobblersettings.h  tageditor.cpp  tageditor.h  trayicon.cpp  trayicon.h
src/lastfm/: scrobbler.cpp  scrobbler.h  scrobblerauth.cpp  scrobblerauth.h
src/tests/: pitests.cpp  pitests.h  systests.cpp  systests.h  tests.cpp
tools/: CMakeLists.txt  exo-daemon  exo-quit  moc-osd  moc-osd.py
translations/: be_BY.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts
